@@ -78,6 +78,7 @@ pycurl_inet_ntop (int family, void *addr, char *string, size_t string_size);
 
 #if LIBCURL_VERSION_NUM >= 0x071304 /* check for 7.19.4 or greater */
 #define HAVE_CURLOPT_NOPROXY
+#define HAVE_CURLOPT_PROTOCOLS
 #endif
 
 #if LIBCURL_VERSION_NUM >= 0x071503 /* check for 7.21.3 or greater */
